<resources>
    <string name="app_name">Charades - بدون كلام</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pick" />
    <string name="pick_mode">Pick a game mode:</string>
    <string name="single_team">Free for all</string>
    <string name="two_teams">Two Teams</string>
    <string name="round_duration">Round duration:</string>
    <string name="number_teams">Number of teams:</string>
    <string name="free_for_all">Free for all</string>
    <string name="teams">Teams</string>
    <string name="one_minute">One minute</string>
    <string name="two_minutes">Two minutes</string>
    <string name="twoo_teams">2 teams</string>
    <string name="three_teams" />
    <string name="threee_teams">3 teams</string>
    <string name="fourr_teams">4 teams</string>
    <string name="done">Done</string>
    <string name="number_rounds">Number of rounds:</string>
    <string name="three_rounds">3 rounds</string>
    <string name="three_roundss">Three rounds</string>
    <string name="five_roundss">Five rounds</string>
    <string name="ten_roundss">Ten rounds</string>
    <string name="start">Start!</string>
    <string name="got_it">Got it!</string>
    <string name="score_button_text">See score!</string>
    <string name="game_over">Game Over!</string>
    <string name="try_again">Try again</string>
    <string name="time_up">Time\'s up!</string>
    <string name="Ready">Ready</string>
    <string name="team_one">Team 1</string>
    <string name="team_two">Team 2</string>
    <string name="team_three">Team 3</string>
    <string name="team_four">Team 4</string>
    <string name="play_again">Play Again</string>
    <string name="title_text">Bedoon Kalam</string>
    <string name="play">Play</string>
    <string name="about">About</string>
    <string name="fetching">Fetching data for the first time…</string>
</resources>
