<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="pickModeViewModel"
            type="com.mo2a.example.charades_.PickModeViewModel" />


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!--            <androidx.constraintlayout.widget.ConstraintLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="match_parent">-->

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/pick_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pick_mode"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RadioGroup
                        android:id="@+id/mode_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        app:layout_constraintStart_toStartOf="@+id/pick_text"
                        app:layout_constraintTop_toBottomOf="@+id/pick_text">

                        <RadioButton
                            android:id="@+id/free_for_all"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="@{()->pickModeViewModel.onSingleModeSelected()}"
                            android:text="@string/free_for_all" />

                        <RadioButton
                            android:id="@+id/teams"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="@{()->pickModeViewModel.onTeamModeSelected()}"
                            android:text="@string/teams" />
                    </RadioGroup>

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:text="@string/number_teams"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/pick_text"
                        app:layout_constraintTop_toBottomOf="@+id/mode_group" />

                    <RadioGroup
                        android:id="@+id/number_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:visibility="gone"
                        app:layout_constraintStart_toStartOf="@+id/textView3"
                        app:layout_constraintTop_toBottomOf="@+id/textView3">

                        <RadioButton
                            android:id="@+id/two_teams"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="@{()->pickModeViewModel.setTeamTwo()}"
                            android:text="@string/twoo_teams" />

                        <RadioButton
                            android:id="@+id/three_teams"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="@{()->pickModeViewModel.setTeamThree()}"
                            android:text="@string/threee_teams" />

                        <RadioButton
                            android:id="@+id/four_teams"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="@{()->pickModeViewModel.setTeamFour()}"
                            android:text="@string/fourr_teams" />
                    </RadioGroup>

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:text="@string/round_duration"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/textView3"
                        app:layout_constraintTop_toBottomOf="@+id/number_group" />

                    <RadioGroup
                        android:id="@+id/duration_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        app:layout_constraintStart_toStartOf="@+id/textView2"
                        app:layout_constraintTop_toBottomOf="@+id/textView2">

                        <RadioButton
                            android:id="@+id/one_minute"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="@{()->pickModeViewModel.setDurOne()}"
                            android:text="@string/one_minute" />

                        <RadioButton
                            android:id="@+id/two_minutes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="@{()->pickModeViewModel.setDurTwo()}"
                            android:text="@string/two_minutes" />
                    </RadioGroup>


                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:text="@string/number_rounds"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/textView2"
                        app:layout_constraintTop_toBottomOf="@+id/duration_group" />

                    <RadioGroup
                        android:id="@+id/numRound_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        app:layout_constraintStart_toStartOf="@+id/textView4"
                        app:layout_constraintTop_toBottomOf="@+id/textView4">

                        <RadioButton
                            android:id="@+id/three_round"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="@{()->pickModeViewModel.setRoundThree()}"
                            android:text="@string/three_roundss" />

                        <RadioButton
                            android:id="@+id/five_round"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="@{()->pickModeViewModel.setRoundFive()}"
                            android:text="@string/five_roundss" />

                        <RadioButton
                            android:id="@+id/ten_round"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="@{()->pickModeViewModel.setRoundTen()}"
                            android:text="@string/ten_roundss" />
                    </RadioGroup>

                    <Button
                        android:id="@+id/done_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="50dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/done"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:onClick="@{()->pickModeViewModel.navigate()}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/numRound_group" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </ScrollView>

            <!--            </androidx.constraintlayout.widget.ConstraintLayout>-->

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
